openexr-sys/openexr-c/include/imath_vec.h

typedef struct Imath_3_0__Vec3_float__t_s {
    float x;
    float y;
    float z;
} OPENEXR_ALIGN(4) Imath_3_0__Vec3_float__t;
typedef Imath_3_0__Vec3_float__t Imath_V3f_t;
typedef struct Imath_3_0__Vec3_double__t_s {
    double x;
    double y;
    double z;
} OPENEXR_ALIGN(8) Imath_3_0__Vec3_double__t;
typedef Imath_3_0__Vec3_double__t Imath_V3d_t;
typedef struct Imath_3_0__Vec4_short__t_s {
    short x;
    short y;
    short z;
    short w;
} OPENEXR_ALIGN(2) Imath_3_0__Vec4_short__t;
typedef Imath_3_0__Vec4_short__t Imath_V4s_t;
typedef struct Imath_3_0__Vec4_int__t_s {
    int x;
    int y;
    int z;
    int w;
} OPENEXR_ALIGN(4) Imath_3_0__Vec4_int__t;
typedef Imath_3_0__Vec4_int__t Imath_Vec4_t;
OPENEXR_API unsigned int Imath_3_0__Vec3_float___op_imul(
    Imath_V3f_t * this_
    , Imath_V3f_t const * * return_
    , Imath_V3f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_float___op_imul_1(
    Imath_V3f_t * this_
    , Imath_V3f_t const * * return_
    , float a);
OPENEXR_API unsigned int Imath_3_0__Vec3_float___op_mul(
    Imath_V3f_t const * this_
    , Imath_V3f_t * return_
    , Imath_V3f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_float___op_mul_1(
    Imath_V3f_t const * this_
    , Imath_V3f_t * return_
    , float a);
OPENEXR_API unsigned int Imath_3_0__Vec3_float___op_idiv(
    Imath_V3f_t * this_
    , Imath_V3f_t const * * return_
    , Imath_V3f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_float___op_idiv_1(
    Imath_V3f_t * this_
    , Imath_V3f_t const * * return_
    , float a);
OPENEXR_API unsigned int Imath_3_0__Vec3_float___op_div(
    Imath_V3f_t const * this_
    , Imath_V3f_t * return_
    , Imath_V3f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_float___op_div_1(
    Imath_V3f_t const * this_
    , Imath_V3f_t * return_
    , float a);
OPENEXR_API unsigned int Imath_3_0__Vec3_float__length(
    Imath_V3f_t const * this_
    , float * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_float__length2(
    Imath_V3f_t const * this_
    , float * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_float__normalize(
    Imath_V3f_t * this_
    , Imath_V3f_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_float__normalizeNonNull(
    Imath_V3f_t * this_
    , Imath_V3f_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_float__normalized(
    Imath_V3f_t const * this_
    , Imath_V3f_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_float__normalizedNonNull(
    Imath_V3f_t const * this_
    , Imath_V3f_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_float__baseTypeLowest(
    float * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_float__baseTypeMax(
    float * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_float__baseTypeSmallest(
    float * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_float__baseTypeEpsilon(
    float * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_float__dimensions(
    unsigned int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_double__index(
    Imath_V3d_t * this_
    , double * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec3_double__index_const(
    Imath_V3d_t const * this_
    , double const * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec3_double__ctor(
    Imath_V3d_t * this_);
OPENEXR_API unsigned int Imath_3_0__Vec3_double__ctor_1(
    Imath_V3d_t * this_
    , double a);
OPENEXR_API unsigned int Imath_3_0__Vec3_double__ctor_2(
    Imath_V3d_t * this_
    , double a
    , double b
    , double c);
OPENEXR_API unsigned int Imath_3_0__Vec3_double__ctor_3(
    Imath_V3d_t * this_
    , Imath_V3d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_double___assign(
    Imath_V3d_t * this_
    , Imath_V3d_t const * * return_
    , Imath_V3d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_double__dtor(
    Imath_V3d_t * this_);
OPENEXR_API unsigned int Imath_3_0__Vec3_double__getValue(
    Imath_V3d_t * this_
    , double * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_double__getValue_1(
    Imath_V3d_t const * this_
    , double const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_double__equalWithAbsError(
    Imath_V3d_t const * this_
    , _Bool * return_
    , Imath_V3d_t const * v
    , double e);
OPENEXR_API unsigned int Imath_3_0__Vec3_double__equalWithRelError(
    Imath_V3d_t const * this_
    , _Bool * return_
    , Imath_V3d_t const * v
    , double e);
OPENEXR_API unsigned int Imath_3_0__Vec3_double__dot(
    Imath_V3d_t const * this_
    , double * return_
    , Imath_V3d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_double__cross(
    Imath_V3d_t const * this_
    , Imath_V3d_t * return_
    , Imath_V3d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_double___op_iadd(
    Imath_V3d_t * this_
    , Imath_V3d_t const * * return_
    , Imath_V3d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_double___op_add(
    Imath_V3d_t const * this_
    , Imath_V3d_t * return_
    , Imath_V3d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_double___op_isub(
    Imath_V3d_t * this_
    , Imath_V3d_t const * * return_
    , Imath_V3d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_double___op_sub(
    Imath_V3d_t const * this_
    , Imath_V3d_t * return_
    , Imath_V3d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_double___op_sub_1(
    Imath_V3d_t const * this_
    , Imath_V3d_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_double__negate(
    Imath_V3d_t * this_
    , Imath_V3d_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_double___op_imul(
    Imath_V3d_t * this_
    , Imath_V3d_t const * * return_
    , Imath_V3d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_double___op_imul_1(
    Imath_V3d_t * this_
    , Imath_V3d_t const * * return_
    , double a);
OPENEXR_API unsigned int Imath_3_0__Vec3_double___op_mul(
    Imath_V3d_t const * this_
    , Imath_V3d_t * return_
    , Imath_V3d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_double___op_mul_1(
    Imath_V3d_t const * this_
    , Imath_V3d_t * return_
    , double a);
OPENEXR_API unsigned int Imath_3_0__Vec3_double___op_idiv(
    Imath_V3d_t * this_
    , Imath_V3d_t const * * return_
    , Imath_V3d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_double___op_idiv_1(
    Imath_V3d_t * this_
    , Imath_V3d_t const * * return_
    , double a);
OPENEXR_API unsigned int Imath_3_0__Vec3_double___op_div(
    Imath_V3d_t const * this_
    , Imath_V3d_t * return_
    , Imath_V3d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_double___op_div_1(
    Imath_V3d_t const * this_
    , Imath_V3d_t * return_
    , double a);
OPENEXR_API unsigned int Imath_3_0__Vec3_double__length(
    Imath_V3d_t const * this_
    , double * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_double__length2(
    Imath_V3d_t const * this_
    , double * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_double__normalize(
    Imath_V3d_t * this_
    , Imath_V3d_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_double__normalizeNonNull(
    Imath_V3d_t * this_
    , Imath_V3d_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_double__normalized(
    Imath_V3d_t const * this_
    , Imath_V3d_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_double__normalizedNonNull(
    Imath_V3d_t const * this_
    , Imath_V3d_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_double__baseTypeLowest(
    double * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_double__baseTypeMax(
    double * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_double__baseTypeSmallest(
    double * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_double__baseTypeEpsilon(
    double * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_double__dimensions(
    unsigned int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_short__index(
    Imath_V4s_t * this_
    , short * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec4_short__index_const(
    Imath_V4s_t const * this_
    , short const * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec4_short__ctor(
    Imath_V4s_t * this_);
OPENEXR_API unsigned int Imath_3_0__Vec4_short__ctor_1(
    Imath_V4s_t * this_
    , short a);
OPENEXR_API unsigned int Imath_3_0__Vec4_short__ctor_2(
    Imath_V4s_t * this_
    , short a
    , short b
    , short c
    , short d);
OPENEXR_API unsigned int Imath_3_0__Vec4_short__ctor_3(
    Imath_V4s_t * this_
    , Imath_V4s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_short___assign(
    Imath_V4s_t * this_
    , Imath_V4s_t const * * return_
    , Imath_V4s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_short__dtor(
    Imath_V4s_t * this_);
OPENEXR_API unsigned int Imath_3_0__Vec4_short__equalWithAbsError(
    Imath_V4s_t const * this_
    , _Bool * return_
    , Imath_V4s_t const * v
    , short e);
OPENEXR_API unsigned int Imath_3_0__Vec4_short__equalWithRelError(
    Imath_V4s_t const * this_
    , _Bool * return_
    , Imath_V4s_t const * v
    , short e);
OPENEXR_API unsigned int Imath_3_0__Vec4_short__dot(
    Imath_V4s_t const * this_
    , short * return_
    , Imath_V4s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_short___op_add(
    Imath_V4s_t const * this_
    , Imath_V4s_t * return_
    , Imath_V4s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_short___op_isub(
    Imath_V4s_t * this_
    , Imath_V4s_t const * * return_
    , Imath_V4s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_short___op_sub(
    Imath_V4s_t const * this_
    , Imath_V4s_t * return_
    , Imath_V4s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_short___op_sub_1(
    Imath_V4s_t const * this_
    , Imath_V4s_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_short__negate(
    Imath_V4s_t * this_
    , Imath_V4s_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_short___op_imul(
    Imath_V4s_t * this_
    , Imath_V4s_t const * * return_
    , Imath_V4s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_short___op_imul_1(
    Imath_V4s_t * this_
    , Imath_V4s_t const * * return_
    , short a);
OPENEXR_API unsigned int Imath_3_0__Vec4_short___op_mul(
    Imath_V4s_t const * this_
    , Imath_V4s_t * return_
    , Imath_V4s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_short___op_mul_1(
    Imath_V4s_t const * this_
    , Imath_V4s_t * return_
    , short a);
OPENEXR_API unsigned int Imath_3_0__Vec4_short___op_idiv(
    Imath_V4s_t * this_
    , Imath_V4s_t const * * return_
    , Imath_V4s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_short___op_idiv_1(
    Imath_V4s_t * this_
    , Imath_V4s_t const * * return_
    , short a);
OPENEXR_API unsigned int Imath_3_0__Vec4_short___op_div(
    Imath_V4s_t const * this_
    , Imath_V4s_t * return_
    , Imath_V4s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_short___op_div_1(
    Imath_V4s_t const * this_
    , Imath_V4s_t * return_
    , short a);
OPENEXR_API unsigned int Imath_3_0__Vec4_short__length2(
    Imath_V4s_t const * this_
    , short * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_short__baseTypeLowest(
    short * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_short__baseTypeMax(
    short * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_short__baseTypeSmallest(
    short * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_short__baseTypeEpsilon(
    short * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_short__dimensions(
    unsigned int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_int__index(
    Imath_Vec4_t * this_
    , int * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec4_int__index_const(
    Imath_Vec4_t const * this_
    , int const * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec4_int__ctor(
    Imath_Vec4_t * this_);
OPENEXR_API unsigned int Imath_3_0__Vec4_int__ctor_1(
    Imath_Vec4_t * this_
    , int a);
OPENEXR_API unsigned int Imath_3_0__Vec4_int__ctor_2(
    Imath_Vec4_t * this_
    , int a
    , int b
    , int c
    , int d);
OPENEXR_API unsigned int Imath_3_0__Vec4_int__ctor_3(
    Imath_Vec4_t * this_
    , Imath_Vec4_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_int___assign(
    Imath_Vec4_t * this_
    , Imath_Vec4_t const * * return_
    , Imath_Vec4_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_int__dtor(
    Imath_Vec4_t * this_);
OPENEXR_API unsigned int Imath_3_0__Vec4_int__equalWithAbsError(
    Imath_Vec4_t const * this_
    , _Bool * return_
    , Imath_Vec4_t const * v
    , int e);
OPENEXR_API unsigned int Imath_3_0__Vec4_int__equalWithRelError(
    Imath_Vec4_t const * this_
    , _Bool * return_
    , Imath_Vec4_t const * v
    , int e);
OPENEXR_API unsigned int Imath_3_0__Vec4_int__dot(
    Imath_Vec4_t const * this_
    , int * return_
    , Imath_Vec4_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_int___op_add(
    Imath_Vec4_t const * this_
    , Imath_Vec4_t * return_
    , Imath_Vec4_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_int___op_isub(
    Imath_Vec4_t * this_
    , Imath_Vec4_t const * * return_
    , Imath_Vec4_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_int___op_sub(
    Imath_Vec4_t const * this_
    , Imath_Vec4_t * return_
    , Imath_Vec4_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_int___op_sub_1(
    Imath_Vec4_t const * this_
    , Imath_Vec4_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_int__negate(
    Imath_Vec4_t * this_
    , Imath_Vec4_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_int___op_imul(
    Imath_Vec4_t * this_
    , Imath_Vec4_t const * * return_
    , Imath_Vec4_t const * v);