openexr-sys/src/imath_vec.rs


pub fn Imath_3_0__Vec3_float___op_imul(this_: *mut Imath_V3f_t, return_: *mut *const Imath_V3f_t, v: *const Imath_V3f_t) -> Exception;

pub fn Imath_3_0__Vec3_float___op_imul_1(this_: *mut Imath_V3f_t, return_: *mut *const Imath_V3f_t, a: c_float) -> Exception;

pub fn Imath_3_0__Vec3_float___op_mul(this_: *const Imath_V3f_t, return_: *mut Imath_V3f_t, v: *const Imath_V3f_t) -> Exception;

pub fn Imath_3_0__Vec3_float___op_mul_1(this_: *const Imath_V3f_t, return_: *mut Imath_V3f_t, a: c_float) -> Exception;

pub fn Imath_3_0__Vec3_float___op_idiv(this_: *mut Imath_V3f_t, return_: *mut *const Imath_V3f_t, v: *const Imath_V3f_t) -> Exception;

pub fn Imath_3_0__Vec3_float___op_idiv_1(this_: *mut Imath_V3f_t, return_: *mut *const Imath_V3f_t, a: c_float) -> Exception;

pub fn Imath_3_0__Vec3_float___op_div(this_: *const Imath_V3f_t, return_: *mut Imath_V3f_t, v: *const Imath_V3f_t) -> Exception;

pub fn Imath_3_0__Vec3_float___op_div_1(this_: *const Imath_V3f_t, return_: *mut Imath_V3f_t, a: c_float) -> Exception;

pub fn Imath_3_0__Vec3_float__length(this_: *const Imath_V3f_t, return_: *mut c_float) -> Exception;

pub fn Imath_3_0__Vec3_float__length2(this_: *const Imath_V3f_t, return_: *mut c_float) -> Exception;

pub fn Imath_3_0__Vec3_float__normalize(this_: *mut Imath_V3f_t, return_: *mut *const Imath_V3f_t) -> Exception;

pub fn Imath_3_0__Vec3_float__normalizeNonNull(this_: *mut Imath_V3f_t, return_: *mut *const Imath_V3f_t) -> Exception;

pub fn Imath_3_0__Vec3_float__normalized(this_: *const Imath_V3f_t, return_: *mut Imath_V3f_t) -> Exception;

pub fn Imath_3_0__Vec3_float__normalizedNonNull(this_: *const Imath_V3f_t, return_: *mut Imath_V3f_t) -> Exception;

pub fn Imath_3_0__Vec3_float__baseTypeLowest(return_: *mut c_float) -> Exception;

pub fn Imath_3_0__Vec3_float__baseTypeMax(return_: *mut c_float) -> Exception;

pub fn Imath_3_0__Vec3_float__baseTypeSmallest(return_: *mut c_float) -> Exception;

pub fn Imath_3_0__Vec3_float__baseTypeEpsilon(return_: *mut c_float) -> Exception;

pub fn Imath_3_0__Vec3_float__dimensions(return_: *mut c_uint) -> Exception;

pub fn Imath_3_0__Vec3_double__index(this_: *mut Imath_V3d_t, return_: *mut *mut c_double, i: c_int) -> Exception;

pub fn Imath_3_0__Vec3_double__index_const(this_: *const Imath_V3d_t, return_: *mut *const c_double, i: c_int) -> Exception;

pub fn Imath_3_0__Vec3_double__ctor(this_: *mut Imath_V3d_t) -> Exception;

pub fn Imath_3_0__Vec3_double__ctor_1(this_: *mut Imath_V3d_t, a: c_double) -> Exception;

pub fn Imath_3_0__Vec3_double__ctor_2(this_: *mut Imath_V3d_t, a: c_double, b: c_double, c: c_double) -> Exception;

pub fn Imath_3_0__Vec3_double__ctor_3(this_: *mut Imath_V3d_t, v: *const Imath_V3d_t) -> Exception;

pub fn Imath_3_0__Vec3_double___assign(this_: *mut Imath_V3d_t, return_: *mut *const Imath_V3d_t, v: *const Imath_V3d_t) -> Exception;

pub fn Imath_3_0__Vec3_double__dtor(this_: *mut Imath_V3d_t) -> Exception;

pub fn Imath_3_0__Vec3_double__getValue(this_: *mut Imath_V3d_t, return_: *mut *mut c_double) -> Exception;

pub fn Imath_3_0__Vec3_double__getValue_1(this_: *const Imath_V3d_t, return_: *mut *const c_double) -> Exception;

pub fn Imath_3_0__Vec3_double__equalWithAbsError(this_: *const Imath_V3d_t, return_: *mut bool, v: *const Imath_V3d_t, e: c_double) -> Exception;

pub fn Imath_3_0__Vec3_double__equalWithRelError(this_: *const Imath_V3d_t, return_: *mut bool, v: *const Imath_V3d_t, e: c_double) -> Exception;

pub fn Imath_3_0__Vec3_double__dot(this_: *const Imath_V3d_t, return_: *mut c_double, v: *const Imath_V3d_t) -> Exception;

pub fn Imath_3_0__Vec3_double__cross(this_: *const Imath_V3d_t, return_: *mut Imath_V3d_t, v: *const Imath_V3d_t) -> Exception;

pub fn Imath_3_0__Vec3_double___op_iadd(this_: *mut Imath_V3d_t, return_: *mut *const Imath_V3d_t, v: *const Imath_V3d_t) -> Exception;

pub fn Imath_3_0__Vec3_double___op_add(this_: *const Imath_V3d_t, return_: *mut Imath_V3d_t, v: *const Imath_V3d_t) -> Exception;

pub fn Imath_3_0__Vec3_double___op_isub(this_: *mut Imath_V3d_t, return_: *mut *const Imath_V3d_t, v: *const Imath_V3d_t) -> Exception;

pub fn Imath_3_0__Vec3_double___op_sub(this_: *const Imath_V3d_t, return_: *mut Imath_V3d_t, v: *const Imath_V3d_t) -> Exception;

pub fn Imath_3_0__Vec3_double___op_sub_1(this_: *const Imath_V3d_t, return_: *mut Imath_V3d_t) -> Exception;

pub fn Imath_3_0__Vec3_double__negate(this_: *mut Imath_V3d_t, return_: *mut *const Imath_V3d_t) -> Exception;

pub fn Imath_3_0__Vec3_double___op_imul(this_: *mut Imath_V3d_t, return_: *mut *const Imath_V3d_t, v: *const Imath_V3d_t) -> Exception;

pub fn Imath_3_0__Vec3_double___op_imul_1(this_: *mut Imath_V3d_t, return_: *mut *const Imath_V3d_t, a: c_double) -> Exception;

pub fn Imath_3_0__Vec3_double___op_mul(this_: *const Imath_V3d_t, return_: *mut Imath_V3d_t, v: *const Imath_V3d_t) -> Exception;

pub fn Imath_3_0__Vec3_double___op_mul_1(this_: *const Imath_V3d_t, return_: *mut Imath_V3d_t, a: c_double) -> Exception;

pub fn Imath_3_0__Vec3_double___op_idiv(this_: *mut Imath_V3d_t, return_: *mut *const Imath_V3d_t, v: *const Imath_V3d_t) -> Exception;

pub fn Imath_3_0__Vec3_double___op_idiv_1(this_: *mut Imath_V3d_t, return_: *mut *const Imath_V3d_t, a: c_double) -> Exception;

pub fn Imath_3_0__Vec3_double___op_div(this_: *const Imath_V3d_t, return_: *mut Imath_V3d_t, v: *const Imath_V3d_t) -> Exception;

pub fn Imath_3_0__Vec3_double___op_div_1(this_: *const Imath_V3d_t, return_: *mut Imath_V3d_t, a: c_double) -> Exception;

pub fn Imath_3_0__Vec3_double__length(this_: *const Imath_V3d_t, return_: *mut c_double) -> Exception;

pub fn Imath_3_0__Vec3_double__length2(this_: *const Imath_V3d_t, return_: *mut c_double) -> Exception;

pub fn Imath_3_0__Vec3_double__normalize(this_: *mut Imath_V3d_t, return_: *mut *const Imath_V3d_t) -> Exception;

pub fn Imath_3_0__Vec3_double__normalizeNonNull(this_: *mut Imath_V3d_t, return_: *mut *const Imath_V3d_t) -> Exception;

pub fn Imath_3_0__Vec3_double__normalized(this_: *const Imath_V3d_t, return_: *mut Imath_V3d_t) -> Exception;

pub fn Imath_3_0__Vec3_double__normalizedNonNull(this_: *const Imath_V3d_t, return_: *mut Imath_V3d_t) -> Exception;

pub fn Imath_3_0__Vec3_double__baseTypeLowest(return_: *mut c_double) -> Exception;

pub fn Imath_3_0__Vec3_double__baseTypeMax(return_: *mut c_double) -> Exception;

pub fn Imath_3_0__Vec3_double__baseTypeSmallest(return_: *mut c_double) -> Exception;

pub fn Imath_3_0__Vec3_double__baseTypeEpsilon(return_: *mut c_double) -> Exception;

pub fn Imath_3_0__Vec3_double__dimensions(return_: *mut c_uint) -> Exception;

pub fn Imath_3_0__Vec4_short__index(this_: *mut Imath_V4s_t, return_: *mut *mut c_short, i: c_int) -> Exception;

pub fn Imath_3_0__Vec4_short__index_const(this_: *const Imath_V4s_t, return_: *mut *const c_short, i: c_int) -> Exception;

pub fn Imath_3_0__Vec4_short__ctor(this_: *mut Imath_V4s_t) -> Exception;

pub fn Imath_3_0__Vec4_short__ctor_1(this_: *mut Imath_V4s_t, a: c_short) -> Exception;

pub fn Imath_3_0__Vec4_short__ctor_2(this_: *mut Imath_V4s_t, a: c_short, b: c_short, c: c_short, d: c_short) -> Exception;

pub fn Imath_3_0__Vec4_short__ctor_3(this_: *mut Imath_V4s_t, v: *const Imath_V4s_t) -> Exception;

pub fn Imath_3_0__Vec4_short___assign(this_: *mut Imath_V4s_t, return_: *mut *const Imath_V4s_t, v: *const Imath_V4s_t) -> Exception;

pub fn Imath_3_0__Vec4_short__dtor(this_: *mut Imath_V4s_t) -> Exception;

pub fn Imath_3_0__Vec4_short__equalWithAbsError(this_: *const Imath_V4s_t, return_: *mut bool, v: *const Imath_V4s_t, e: c_short) -> Exception;

pub fn Imath_3_0__Vec4_short__equalWithRelError(this_: *const Imath_V4s_t, return_: *mut bool, v: *const Imath_V4s_t, e: c_short) -> Exception;

pub fn Imath_3_0__Vec4_short__dot(this_: *const Imath_V4s_t, return_: *mut c_short, v: *const Imath_V4s_t) -> Exception;

pub fn Imath_3_0__Vec4_short___op_add(this_: *const Imath_V4s_t, return_: *mut Imath_V4s_t, v: *const Imath_V4s_t) -> Exception;

pub fn Imath_3_0__Vec4_short___op_isub(this_: *mut Imath_V4s_t, return_: *mut *const Imath_V4s_t, v: *const Imath_V4s_t) -> Exception;

pub fn Imath_3_0__Vec4_short___op_sub(this_: *const Imath_V4s_t, return_: *mut Imath_V4s_t, v: *const Imath_V4s_t) -> Exception;

pub fn Imath_3_0__Vec4_short___op_sub_1(this_: *const Imath_V4s_t, return_: *mut Imath_V4s_t) -> Exception;

pub fn Imath_3_0__Vec4_short__negate(this_: *mut Imath_V4s_t, return_: *mut *const Imath_V4s_t) -> Exception;

pub fn Imath_3_0__Vec4_short___op_imul(this_: *mut Imath_V4s_t, return_: *mut *const Imath_V4s_t, v: *const Imath_V4s_t) -> Exception;

pub fn Imath_3_0__Vec4_short___op_imul_1(this_: *mut Imath_V4s_t, return_: *mut *const Imath_V4s_t, a: c_short) -> Exception;

pub fn Imath_3_0__Vec4_short___op_mul(this_: *const Imath_V4s_t, return_: *mut Imath_V4s_t, v: *const Imath_V4s_t) -> Exception;

pub fn Imath_3_0__Vec4_short___op_mul_1(this_: *const Imath_V4s_t, return_: *mut Imath_V4s_t, a: c_short) -> Exception;

pub fn Imath_3_0__Vec4_short___op_idiv(this_: *mut Imath_V4s_t, return_: *mut *const Imath_V4s_t, v: *const Imath_V4s_t) -> Exception;

pub fn Imath_3_0__Vec4_short___op_idiv_1(this_: *mut Imath_V4s_t, return_: *mut *const Imath_V4s_t, a: c_short) -> Exception;

pub fn Imath_3_0__Vec4_short___op_div(this_: *const Imath_V4s_t, return_: *mut Imath_V4s_t, v: *const Imath_V4s_t) -> Exception;

pub fn Imath_3_0__Vec4_short___op_div_1(this_: *const Imath_V4s_t, return_: *mut Imath_V4s_t, a: c_short) -> Exception;

pub fn Imath_3_0__Vec4_short__length2(this_: *const Imath_V4s_t, return_: *mut c_short) -> Exception;

pub fn Imath_3_0__Vec4_short__baseTypeLowest(return_: *mut c_short) -> Exception;

pub fn Imath_3_0__Vec4_short__baseTypeMax(return_: *mut c_short) -> Exception;

pub fn Imath_3_0__Vec4_short__baseTypeSmallest(return_: *mut c_short) -> Exception;

pub fn Imath_3_0__Vec4_short__baseTypeEpsilon(return_: *mut c_short) -> Exception;

pub fn Imath_3_0__Vec4_short__dimensions(return_: *mut c_uint) -> Exception;

pub fn Imath_3_0__Vec4_int__index(this_: *mut Imath_Vec4_t, return_: *mut *mut c_int, i: c_int) -> Exception;

pub fn Imath_3_0__Vec4_int__index_const(this_: *const Imath_Vec4_t, return_: *mut *const c_int, i: c_int) -> Exception;

pub fn Imath_3_0__Vec4_int__ctor(this_: *mut Imath_Vec4_t) -> Exception;

pub fn Imath_3_0__Vec4_int__ctor_1(this_: *mut Imath_Vec4_t, a: c_int) -> Exception;

pub fn Imath_3_0__Vec4_int__ctor_2(this_: *mut Imath_Vec4_t, a: c_int, b: c_int, c: c_int, d: c_int) -> Exception;

pub fn Imath_3_0__Vec4_int__ctor_3(this_: *mut Imath_Vec4_t, v: *const Imath_Vec4_t) -> Exception;

pub fn Imath_3_0__Vec4_int___assign(this_: *mut Imath_Vec4_t, return_: *mut *const Imath_Vec4_t, v: *const Imath_Vec4_t) -> Exception;

pub fn Imath_3_0__Vec4_int__dtor(this_: *mut Imath_Vec4_t) -> Exception;

pub fn Imath_3_0__Vec4_int__equalWithAbsError(this_: *const Imath_Vec4_t, return_: *mut bool, v: *const Imath_Vec4_t, e: c_int) -> Exception;

pub fn Imath_3_0__Vec4_int__equalWithRelError(this_: *const Imath_Vec4_t, return_: *mut bool, v: *const Imath_Vec4_t, e: c_int) -> Exception;

pub fn Imath_3_0__Vec4_int__dot(this_: *const Imath_Vec4_t, return_: *mut c_int, v: *const Imath_Vec4_t) -> Exception;

pub fn Imath_3_0__Vec4_int___op_add(this_: *const Imath_Vec4_t, return_: *mut Imath_Vec4_t, v: *const Imath_Vec4_t) -> Exception;

pub fn Imath_3_0__Vec4_int___op_isub(this_: *mut Imath_Vec4_t, return_: *mut *const Imath_Vec4_t, v: *const Imath_Vec4_t) -> Exception;

pub fn Imath_3_0__Vec4_int___op_sub(this_: *const Imath_Vec4_t, return_: *mut Imath_Vec4_t, v: *const Imath_Vec4_t) -> Exception;

pub fn Imath_3_0__Vec4_int___op_sub_1(this_: *const Imath_Vec4_t, return_: *mut Imath_Vec4_t) -> Exception;

pub fn Imath_3_0__Vec4_int__negate(this_: *mut Imath_Vec4_t, return_: *mut *const Imath_Vec4_t) -> Exception;

pub fn Imath_3_0__Vec4_int___op_imul(this_: *mut Imath_Vec4_t, return_: *mut *const Imath_Vec4_t, v: *const Imath_Vec4_t) -> Exception;
